--- a/requirements.txt
+++ b/requirements.txt
@@ -16,16 +16,16 @@ braceexpand==0.1.7
 brotlipy==0.7.0
 cachetools==5.3.1
 catalogue==2.0.10
-certifi @ file:///croot/certifi_1690232220950/work/certifi
-cffi @ file:///tmp/abs_98z5h56wf8/croots/recipe/cffi_1659598650955/work
+certifi 
+cffi 
 cfgv==3.4.0
 chardet==4.0.0
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+charset-normalizer 
 click==8.1.7
 confection==0.1.3
 contexttimer==0.3.3
 contourpy==1.1.1
-cryptography @ file:///croot/cryptography_1694444244250/work
+cryptography 
 cycler==0.11.0
 cymem==2.0.8
 decorator==5.1.1
@@ -34,7 +34,7 @@ distlib==0.3.7
 docker==3.6.0
 docker-pycreds==0.4.0
 einops==0.6.1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
+en-core-web-sm 
 evalai==1.3.16
 executing==1.2.0
 fairscale==0.4.4
@@ -46,7 +46,7 @@ gitdb==4.0.10
 GitPython==3.1.37
 huggingface-hub==0.17.3
 identify==2.5.29
-idna @ file:///croot/idna_1666125576474/work
+idna 
 imageio==2.31.4
 importlib-metadata==6.8.0
 importlib-resources==6.1.0
@@ -69,13 +69,13 @@ matplotlib==3.7.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mkl-fft==1.3.1
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
+mkl-random 
 mkl-service==2.4.0
 murmurhash==1.0.10
 networkx==3.1
 nltk==3.8.1
 nodeenv==1.8.0
-numpy @ file:///croot/numpy_and_numpy_base_1682520569166/work
+numpy
 omegaconf==2.3.0
 opencv-python-headless==4.5.5.64
 opendatasets==0.1.22
@@ -85,7 +85,7 @@ parso==0.8.3
 pathy==0.10.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow @ file:///croot/pillow_1695134008276/work
+Pillow 
 pkgutil_resolve_name==1.3.10
 platformdirs==3.10.0
 plotly==5.17.0
@@ -99,14 +99,14 @@ pure-eval==0.2.2
 pyarrow==13.0.0
 pycocoevalcap==1.2
 pycocotools==2.0.7
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pycparser 
 pydantic==2.4.1
 pydantic_core==2.10.1
 pydeck==0.8.1b0
 Pygments==2.16.1
-pyOpenSSL @ file:///croot/pyopenssl_1690223430423/work
+pyOpenSSL 
 pyparsing==3.1.1
-PySocks @ file:///tmp/build/80754af9/pysocks_1605305779399/work
+PySocks 
 python-dateutil==2.8.2
 python-magic==0.4.27
 python-slugify==8.0.1
@@ -115,7 +115,7 @@ PyWavelets==1.4.1
 PyYAML==6.0.1
 referencing==0.30.2
 regex==2023.8.8
-requests @ file:///croot/requests_1690400202158/work
+requests 
 rich==13.5.3
 rpds-py==0.10.3
 s3transfer==0.6.0
@@ -126,7 +126,7 @@ scikit-learn==1.3.1
 scipy==1.10.1
 sentence-transformers==2.2.2
 sentencepiece==0.1.99
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six 
 smart-open==6.4.0
 smmap==5.0.1
 soupsieve==2.3.2.post1
@@ -153,10 +153,10 @@ tqdm==4.66.1
 traitlets==5.10.1
 transformers==4.26.1
 typer==0.9.0
-typing_extensions @ file:///croot/typing_extensions_1690297465030/work
+typing_extensions 
 tzdata==2023.3
 tzlocal==5.0.1
-urllib3 @ file:///croot/urllib3_1686163155763/work
+urllib3 
 validators==0.12.6
 virtualenv==20.24.5
 wasabi==1.1.2
